--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
      <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <!-- début entête HTML -->
         
-        <link rel="icon" type="image/png" sizes="32x32" href="https://jlandre.mmi-troyes.fr/favicon-32x32.png">
-        <script src="./jl_files/jquery-3.4.1.min.js.download"></script>
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
         <!-- UIkit CSS -->
-        <link rel="stylesheet" href="./jl_files/uikit.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
 
         <!-- UIkit JS -->
-        <script src="./jl_files/uikit.min.js.download"></script>
-        <script src="./jl_files/uikit-icons.min.js.download"></script>
-	    <link href="./jl_files/messtyles.php" type="text/css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script>
+
+	    <link href="css/messtyles.css" type="text/css" rel="stylesheet">
     </head>  <!-- fin entête HTML -->
     <body>  <!-- début corps HTML -->
 
