--- a/index.html
+++ b/index.html
@@ -22,7 +22,33 @@
         <img src="img/burger.svg" alt="burger menu" id="burger">
         <img src="img/burger_x.svg" alt="burger menu x" id="burger_x" style="display: none;">
 
-        <img class="mySlides" src="./jl_files/00-slider-sv-01.png" alt="00-slider-sv-01.png" style="display: none;"><img class="mySlides" src="./jl_files/00-slider-sv-02.png" alt="00-slider-sv-02.png" style="display: none;"><img class="mySlides" src="./jl_files/01.jpg" alt="01.jpg" style="display: none;"><img class="mySlides" src="./jl_files/02.jpg" alt="02.jpg" style="display: none;"><img class="mySlides" src="./jl_files/03-slider-sv-03.png" alt="03-slider-sv-03.png" style="display: none;"><img class="mySlides" src="./jl_files/03-slider-sv-04.png" alt="03-slider-sv-04.png" style="display: none;"><img class="mySlides" src="./jl_files/04.jpg" alt="04.jpg" style="display: none;"><img class="mySlides" src="./jl_files/05-slider-sv-10.png" alt="05-slider-sv-10.png" style="display: none;"><img class="mySlides" src="./jl_files/05.jpg" alt="05.jpg" style="display: none;"><img class="mySlides" src="./jl_files/06.jpg" alt="06.jpg" style="display: none;"><img class="mySlides" src="./jl_files/07.jpg" alt="07.jpg" style="display: none;"><img class="mySlides" src="./jl_files/08-slider-sv-05.png" alt="08-slider-sv-05.png" style="display: block;"><img class="mySlides" src="./jl_files/08-slider-sv-06.png" alt="08-slider-sv-06.png" style="display: none;"><img class="mySlides" src="./jl_files/09.jpg" alt="09.jpg" style="display: none;"><img class="mySlides" src="./jl_files/10.jpg" alt="10.jpg" style="display: none;"><img class="mySlides" src="./jl_files/11-slider-sv-07.png" alt="11-slider-sv-07.png" style="display: none;"><img class="mySlides" src="./jl_files/11-slider-sv-08.png" alt="11-slider-sv-08.png" style="display: none;"><img class="mySlides" src="./jl_files/12.jpg" alt="12.jpg" style="display: none;"><img class="mySlides" src="./jl_files/13-slider-sv-09.png" alt="13-slider-sv-09.png" style="display: none;"><img class="mySlides" src="./jl_files/14.jpg" alt="14.jpg" style="display: none;"><img class="mySlides" src="./jl_files/15.jpg" alt="15.jpg" style="display: none;"><img class="mySlides" src="./jl_files/17.jpg" alt="17.jpg" style="display: none;"><img class="mySlides" src="./jl_files/20.jpg" alt="20.jpg" style="display: none;"><img class="mySlides" src="./jl_files/30.jpg" alt="30.jpg" style="display: none;"><img class="mySlides" src="./jl_files/34.jpg" alt="34.jpg" style="display: none;"><img class="mySlides" src="./jl_files/35.jpg" alt="35.jpg" style="display: none;"><img class="mySlides" src="./jl_files/39.jpg" alt="39.jpg" style="display: none;">
+        <img class="mySlides" src="img/00-slider-sv-01.png" alt="00-slider-sv-01.png" style="display: none;">
+        <img class="mySlides" src="img/00-slider-sv-02.png" alt="00-slider-sv-02.png" style="display: none;">
+        <img class="mySlides" src="img/01.jpg" alt="01.jpg" style="display: none;">
+        <img class="mySlides" src="img/02.jpg" alt="02.jpg" style="display: none;">
+        <img class="mySlides" src="img/03-slider-sv-03.png" alt="03-slider-sv-03.png" style="display: none;">
+        <img class="mySlides" src="img/03-slider-sv-04.png" alt="03-slider-sv-04.png" style="display: none;">
+        <img class="mySlides" src="img/04.jpg" alt="04.jpg" style="display: none;">
+        <img class="mySlides" src="img/05-slider-sv-10.png" alt="05-slider-sv-10.png" style="display: none;">
+        <img class="mySlides" src="img/05.jpg" alt="05.jpg" style="display: none;">
+        <img class="mySlides" src="img/06.jpg" alt="06.jpg" style="display: none;">
+        <img class="mySlides" src="img/07.jpg" alt="07.jpg" style="display: none;">
+        <img class="mySlides" src="img/08-slider-sv-05.png" alt="08-slider-sv-05.png" style="display: block;">
+        <img class="mySlides" src="img/08-slider-sv-06.png" alt="08-slider-sv-06.png" style="display: none;">
+        <img class="mySlides" src="img/09.jpg" alt="09.jpg" style="display: none;">
+        <img class="mySlides" src="img/10.jpg" alt="10.jpg" style="display: none;">
+        <img class="mySlides" src="img/11-slider-sv-07.png" alt="11-slider-sv-07.png" style="display: none;">
+        <img class="mySlides" src="img/11-slider-sv-08.png" alt="11-slider-sv-08.png" style="display: none;">
+        <img class="mySlides" src="img/12.jpg" alt="12.jpg" style="display: none;">
+        <img class="mySlides" src="img/13-slider-sv-09.png" alt="13-slider-sv-09.png" style="display: none;">
+        <img class="mySlides" src="img/14.jpg" alt="14.jpg" style="display: none;">
+        <img class="mySlides" src="img/15.jpg" alt="15.jpg" style="display: none;">
+        <img class="mySlides" src="img/17.jpg" alt="17.jpg" style="display: none;">
+        <img class="mySlides" src="img/20.jpg" alt="20.jpg" style="display: none;">
+        <img class="mySlides" src="img/30.jpg" alt="30.jpg" style="display: none;">
+        <img class="mySlides" src="img/34.jpg" alt="34.jpg" style="display: none;">
+        <img class="mySlides" src="img/35.jpg" alt="35.jpg" style="display: none;">
+        <img class="mySlides" src="img/39.jpg" alt="39.jpg" style="display: none;">
         <div id="begin"></div>
 
 
@@ -121,7 +147,8 @@
             </div>
             <div class="info">
                 <h2>Plan d'accès :</h2>
-                <iframe id="gmap" class="info" src="./jl_files/embed.html" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe id="gmap" class="info" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2127.3324714344285!2d14.162199936097217!3d57.77873418787929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465a6dec7b538d19%3A0xe9a53722e7690a65!2zSlRILCA1NTMgMTggSsO2bmvDtnBpbmc!5e0!3m2!1sfr!2sse!4v1729085495475!5m2!1sfr!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                
                 <!--iframe id="gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2655.744731909587!2d4.077349816074941!3d48.26928677923419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ee990d75231f69%3A0xaf56bd2c56819720!2sDUT%20M%C3%A9tiers%20de%20l&#39;Internet%20et%20du%20Multim%C3%A9dia!5e0!3m2!1sfr!2sfr!4v1567677820010!5m2!1sfr!2sfr" frameborder="0" style="border:0;" allowfullscreen=""></iframe-->
             </div>
             <div class="clearfloats">&nbsp;</div>
