index.html changed version 07

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
         <!-- UIkit CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
+        <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" /-->
 
         <!-- UIkit JS -->
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script>
+        <!--script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script-->
+        <!--script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script-->
 
 	    <link href="css/messtyles.css" type="text/css" rel="stylesheet">
     </head>  <!-- fin entête HTML -->
@@ -164,7 +164,7 @@
                 <a href="https://jlandre.mmi-troyes.fr/c.php" id="itemTeaching" class="menuItem">Enseignement</a><br>
                 <a href="https://jlandre.mmi-troyes.fr/docs.php" id="itemDocs" class="menuItem">Documents</a><br>
                                 <!--br /-->
-                <a href="?lang=en">EN</a>/<a href="https://jlandre.mmi-troyes.fr/jl.php?lang=fr">FR</a>
+                <a href="?lang=en">EN</a>/<a href="?lang=fr">FR</a>
             </p>
         </nav>
 
