index.html changed version 09

--- a/index.html
+++ b/index.html
@@ -22,35 +22,34 @@
         <img src="img/burger.svg" alt="burger menu" id="burger">
         <img src="img/burger_x.svg" alt="burger menu x" id="burger_x" style="display: none;">
 
-        <img class="mySlides" src="img/00-slider-sv-01.png" alt="00-slider-sv-01.png" style="display: none;">
-        <img class="mySlides" src="img/00-slider-sv-02.png" alt="00-slider-sv-02.png" style="display: none;">
-        <img class="mySlides" src="img/01.jpg" alt="01.jpg" style="display: none;">
-        <img class="mySlides" src="img/02.jpg" alt="02.jpg" style="display: none;">
-        <img class="mySlides" src="img/03-slider-sv-03.png" alt="03-slider-sv-03.png" style="display: none;">
-        <img class="mySlides" src="img/03-slider-sv-04.png" alt="03-slider-sv-04.png" style="display: none;">
-        <img class="mySlides" src="img/04.jpg" alt="04.jpg" style="display: none;">
-        <img class="mySlides" src="img/05-slider-sv-10.png" alt="05-slider-sv-10.png" style="display: none;">
-        <img class="mySlides" src="img/05.jpg" alt="05.jpg" style="display: none;">
-        <img class="mySlides" src="img/06.jpg" alt="06.jpg" style="display: none;">
-        <img class="mySlides" src="img/07.jpg" alt="07.jpg" style="display: none;">
-        <img class="mySlides" src="img/08-slider-sv-05.png" alt="08-slider-sv-05.png" style="display: block;">
-        <img class="mySlides" src="img/08-slider-sv-06.png" alt="08-slider-sv-06.png" style="display: none;">
-        <img class="mySlides" src="img/09.jpg" alt="09.jpg" style="display: none;">
-        <img class="mySlides" src="img/10.jpg" alt="10.jpg" style="display: none;">
-        <img class="mySlides" src="img/11-slider-sv-07.png" alt="11-slider-sv-07.png" style="display: none;">
-        <img class="mySlides" src="img/11-slider-sv-08.png" alt="11-slider-sv-08.png" style="display: none;">
-        <img class="mySlides" src="img/12.jpg" alt="12.jpg" style="display: none;">
-        <img class="mySlides" src="img/13-slider-sv-09.png" alt="13-slider-sv-09.png" style="display: none;">
-        <img class="mySlides" src="img/14.jpg" alt="14.jpg" style="display: none;">
-        <img class="mySlides" src="img/15.jpg" alt="15.jpg" style="display: none;">
-        <img class="mySlides" src="img/17.jpg" alt="17.jpg" style="display: none;">
-        <img class="mySlides" src="img/20.jpg" alt="20.jpg" style="display: none;">
-        <img class="mySlides" src="img/30.jpg" alt="30.jpg" style="display: none;">
-        <img class="mySlides" src="img/34.jpg" alt="34.jpg" style="display: none;">
-        <img class="mySlides" src="img/35.jpg" alt="35.jpg" style="display: none;">
-        <img class="mySlides" src="img/39.jpg" alt="39.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/00-slider-sv-01.png" alt="00-slider-sv-01.png" style="display: none;">
+        <img class="mySlides" src="img/slider/00-slider-sv-02.png" alt="00-slider-sv-02.png" style="display: none;">
+        <img class="mySlides" src="img/slider/01.jpg" alt="01.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/02.jpg" alt="02.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/03-slider-sv-03.png" alt="03-slider-sv-03.png" style="display: none;">
+        <img class="mySlides" src="img/slider/03-slider-sv-04.png" alt="03-slider-sv-04.png" style="display: none;">
+        <img class="mySlides" src="img/slider/04.jpg" alt="04.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/05-slider-sv-10.png" alt="05-slider-sv-10.png" style="display: none;">
+        <img class="mySlides" src="img/slider/05.jpg" alt="05.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/06.jpg" alt="06.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/07.jpg" alt="07.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/08-slider-sv-05.png" alt="08-slider-sv-05.png" style="display: block;">
+        <img class="mySlides" src="img/slider/08-slider-sv-06.png" alt="08-slider-sv-06.png" style="display: none;">
+        <img class="mySlides" src="img/slider/09.jpg" alt="09.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/10.jpg" alt="10.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/11-slider-sv-07.png" alt="11-slider-sv-07.png" style="display: none;">
+        <img class="mySlides" src="img/slider/11-slider-sv-08.png" alt="11-slider-sv-08.png" style="display: none;">
+        <img class="mySlides" src="img/slider/12.jpg" alt="12.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/13-slider-sv-09.png" alt="13-slider-sv-09.png" style="display: none;">
+        <img class="mySlides" src="img/slider/14.jpg" alt="14.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/15.jpg" alt="15.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/17.jpg" alt="17.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/20.jpg" alt="20.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/30.jpg" alt="30.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/34.jpg" alt="34.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/35.jpg" alt="35.jpg" style="display: none;">
+        <img class="mySlides" src="img/slider/39.jpg" alt="39.jpg" style="display: none;">
         <div id="begin"></div>
-
 
         <div id="contenu">
             <div id="home">
@@ -211,7 +210,6 @@
                 }
             })
         </script>
-
 
 </body><!-- fin corps HTML -->
 </html>
